Remove unused sections, reorganize .md sections

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -7,6 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext auto_reload\n",
+    "%autoreload 2\n",
+    "\n",
     "import pandas as pd\n",
     "import pelage as plg\n",
     "import polars as pl\n",
@@ -31,10 +34,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dff96578",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext notifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3309fcbe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fmt: off\n",
     "df = emissions_pandas\n",
     "df = df.dropna(subset=[\"fuel_consumption\"])\n",
     "df.drop([\"vehicle_family_number\"], axis=1, inplace=True)\n",
@@ -47,12 +61,9 @@
     "    manuf_df = df[df[\"manufacturer_name\"] == manufacturer]\n",
     "    for year in df[\"year\"].unique():\n",
     "        subset_df = manuf_df[(manuf_df[\"year\"] == year)]\n",
-    "        result = {\n",
-    "            \"manufacturer_name\": manufacturer,\n",
+    "        result = {\"manufacturer_name\": manufacturer,\n",
     "            \"year\": year,\n",
-    "            \"mean_fuel_consumption\": subset_df[\"fuel_consumption_per_100km\"].mean(),\n",
-    "            \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(),\n",
-    "            \"vehicle_count\": subset_df[\"vehicle_id\"].nunique(),\n",
+    "            \"mean_fuel_consumption\": subset_df[\"fuel_consumption_per_100km\"].mean(), \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(), \"vehicle_count\": subset_df[\"vehicle_id\"].nunique(),\n",
     "        }\n",
     "        grouped.append(result)\n",
     "\n",
@@ -60,7 +71,8 @@
     "grouped = grouped.dropna()\n",
     "grouped = grouped.sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
     "grouped = grouped[grouped[\"vehicle_count\"] >= 100]\n",
-    "grouped = grouped.reset_index(drop=True)"
+    "grouped = grouped.reset_index(drop=True)\n",
+    "# fmt: on"
    ]
   },
   {
@@ -127,12 +139,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b3bc15c",
+   "metadata": {},
+   "source": [
+    "# What is TDD?\n",
+    "![alt text](assets/tdd-schema.png){width=500}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7fc7825d",
    "metadata": {},
    "source": [
     "## This is Kent Beck:\n",
     "\n",
-    "![alt text](image.png){width=250}\n",
+    "![alt text](assets/kent_beck.png){width=400}\n",
     "\n",
     "- Kent coined the term TDD\n",
     "- Kent created one of the first testing frameworks\n",
@@ -159,6 +180,14 @@
    "outputs": [],
    "source": [
     "emissions_for_tdd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca947496",
+   "metadata": {},
+   "source": [
+    "# Now let's do some real TDD!"
    ]
   },
   {
@@ -210,29 +239,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6c9120",
+   "id": "dbc9b3a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    emissions_for_tdd.select(\n",
-    "        \"country\",\n",
-    "        \"vehicle_family_number\",\n",
-    "        \"manufacturer_name\",\n",
-    "        \"model_type\",\n",
-    "        \"model_variant\",\n",
-    "        \"brand_name\",\n",
-    "        \"commercial_name\",\n",
-    "        \"registered_category\",\n",
-    "    )\n",
-    "    .unique()\n",
-    "    # .group_by(\"model_variant\")\n",
-    "    # .agg(pl.all().unique())\n",
-    "    .select(\"brand_name\")\n",
-    "    .unique()\n",
-    "    .pipe(plg.custom_check, pl.col.brand_name.str.contains_any([r\".\", \"-\"]).not_())\n",
-    "    # .pipe(plg.che)\n",
-    ")"
+    "loaded_stocks = pl.read_parquet(\"data/stocks.parquet\")"
    ]
   },
   {
@@ -243,7 +254,7 @@
    "outputs": [],
    "source": [
     "full_stocks_by_10min = (\n",
-    "    pl.read_parquet(\"data/stocks.parquet\")\n",
+    "    loaded_stocks\n",
     "    .filter(\n",
     "        (\n",
     "            pl.col.zone.is_in([\"zone_28\", \"zone_29\", \"zone_17\"])\n",
@@ -281,25 +292,6 @@
     "    .pipe(plg.not_constant, columns=\"timestamp\", group_by=[\"zone\", \"subzone\", \"date\"])\n",
     ")\n",
     "full_stocks_by_10min"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce0c62a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    full_stocks_by_10min\n",
-    "    .group_by(\"zone\", \"subzone\", \"date\")\n",
-    "    .agg(\n",
-    "        pl.col.stock_value_min.min(),\n",
-    "        pl.col.stock_value_max.max(),\n",
-    "        max_interval=pl.col.timestamp.diff().max(),\n",
-    "        n_observations=pl.len(),\n",
-    "    ).sort(\"max_interval\", descending=True)\n",
-    ")"
    ]
   }
  ],
