Transform solutions to markdown to avoid interaction

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -7,16 +7,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext auto_reload\n",
+    "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import pandas as pd\n",
-    "import pelage as plg\n",
     "import polars as pl\n",
     "\n",
     "from load_data import data_loader\n",
     "\n",
     "emissions = data_loader()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b3bc15c",
+   "metadata": {},
+   "source": [
+    "# What is TDD?\n",
+    "![alt text](assets/tdd-schema.png){width=500}"
    ]
   },
   {
@@ -39,6 +47,14 @@
    "outputs": [],
    "source": [
     "%load_ext notifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68a928fb",
+   "metadata": {},
+   "source": [
+    "# Step 1: From Pandas To Polars"
    ]
   },
   {
@@ -76,12 +92,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "f9332ca9",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "main_yearly_emissions_per_manufacturer = (\n",
     "    emissions_pandas.dropna(subset=[\"fuel_consumption\"])\n",
     "    .drop([\"vehicle_family_number\"], axis=1)\n",
@@ -99,26 +114,10 @@
     "    .sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
     "    .loc[lambda df: df[\"vehicle_count\"] >= 100]\n",
     "    .reset_index(drop=True)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3088e53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emissions_polars = pl.DataFrame(emissions_pandas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4c01073",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
+    "emissions_polars = pl.DataFrame(emissions_pandas)\n",
+    "\n",
     "main_yearly_emissions_per_manufacturer = (\n",
     "    emissions_polars.drop_nulls(subset=[\"fuel_consumption\"])\n",
     "    .drop([\"vehicle_family_number\"])\n",
@@ -134,16 +133,8 @@
     "    )\n",
     "    .sort([\"mean_fuel_consumption\", \"year\"], descending=True)\n",
     "    .filter(pl.col.vehicle_count >= 100)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b3bc15c",
-   "metadata": {},
-   "source": [
-    "# What is TDD?\n",
-    "![alt text](assets/tdd-schema.png){width=500}"
+    ")\n",
+    "```"
    ]
   },
   {
@@ -151,15 +142,16 @@
    "id": "7fc7825d",
    "metadata": {},
    "source": [
+    "# But What About TDD?\n",
     "## This is Kent Beck:\n",
     "\n",
     "![alt text](assets/kent_beck.png){width=400}\n",
     "\n",
-    "- Kent coined the term TDD\n",
-    "- Kent created one of the first testing frameworks\n",
-    "- Kent found that a testing framework should be written in the same language as the code\n",
-    "- Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
-    "- Kent has usually good ideas about software development\n"
+    "- #####  Kent coined the term TDD\n",
+    "- #####  Kent created one of the first testing frameworks\n",
+    "- #####  Kent found that a testing framework should be written in the same language as the code\n",
+    "- #####  Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
+    "- #####  Kent has usually good ideas about software development"
    ]
   },
   {
@@ -187,16 +179,15 @@
    "id": "ca947496",
    "metadata": {},
    "source": [
-    "# Now let's do some real TDD!"
+    "## Step 2: Now Let's Do Some Real Tdd In Polars!"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9e18016a",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "primary_key_columns = [\n",
     "    \"vehicle_id\",\n",
     "    \"reporting_period\",\n",
@@ -233,7 +224,8 @@
     "    )\n",
     "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
     "    .pipe(plg.has_dtypes, {\"used_in_calculation\": pl.Boolean})\n",
-    ")"
+    ")\n",
+    "```"
    ]
   },
   {
@@ -247,12 +239,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8d6bc1d6",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "full_stocks_by_10min = (\n",
     "    loaded_stocks\n",
     "    .filter(\n",
@@ -291,7 +282,8 @@
     "    )\n",
     "    .pipe(plg.not_constant, columns=\"timestamp\", group_by=[\"zone\", \"subzone\", \"date\"])\n",
     ")\n",
-    "full_stocks_by_10min"
+    "full_stocks_by_10min\n",
+    "```"
    ]
   }
  ],
