Add notes for introduction and conclusion

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -28,6 +28,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e1a0db2",
+   "metadata": {},
+   "source": [
+    "My name is Alix Tiran-Cappello, I work as a data scientist / MLOPS pipeline maintainer for Renault Group for my day job. \n",
+    "\n",
+    "I am only saying this to explain that I get called A LOT to debug some pandas either failing or with absolute garbage performance.  \n",
+    "\n",
+    "And this experience has definitely shaped some ideas that will perspire during this presentation. \n",
+    "\n",
+    "But today I am here on my own, and what I will say today is not associated in any way with my company. \n",
+    "\n",
+    "\n",
+    "The reason I am here is to present to you a small open source package `pelage`. that I created to help you write better data science code with polars and TDD. \n",
+    "\n",
+    "My goal is to bring basic key practices of software engineering that have demonstrated usefulness to maintain velocity and imbed quality from the start when you write data science code.\n",
+    "\n",
+    "What is TDD ?\n",
+    "\n",
+    "We will see it countless times during this talk.\n",
+    "\n",
+    "Before we can start with TDD, I'd like to guide you through a brief journey. During this time, we will take some pandas code, AND WITHOUT LOOKING AT THE DATA, translate it using refactoring tests to polars, to get used to its syntax and specificities. \n",
+    "\n",
+    "Then we will see how we can use pelage to write a meaningful data test, see it fail, then write some simple code, and make it pass. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "117f5150",
@@ -67,7 +94,7 @@
     "# fmt: off\n",
     "df = emissions_pandas\n",
     "df = df.dropna(subset=[\"fuel_consumption\"])\n",
-    "df.drop([\"vehicle_family_number\"], axis=1, inplace=True)\n",
+    "df.drop([\"obfcm_data_source\", \"registered_category\"], axis=1, inplace=True)\n",
     "\n",
     "df[df[\"fuel_type\"] == \"PETROL\"][\"fuel_type\"] = \"petrol\"\n",
     "df[\"fuel_consumption_per_100km\"] = df[\"fuel_consumption\"] * 100\n",
@@ -155,6 +182,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f372dc5c",
+   "metadata": {},
+   "source": [
+    "## Enters Pelage\n",
+    "\n",
+    "A testing framework to be used with polars to express data science concepts clearly and easily.\n",
+    "\n",
+    "Pass a dataframe to a testing function:\n",
+    "- If it fails you get a nice descriptive error message!\n",
+    "- If it passes, you get your dataframe back!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec88c075",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b4fbb6c4",
@@ -165,21 +212,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca947496",
+   "metadata": {},
+   "source": [
+    "## Step 2: Now Let's Do Some Real Tdd In Polars!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "849fcbb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "emissions_for_tdd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca947496",
-   "metadata": {},
-   "source": [
-    "## Step 2: Now Let's Do Some Real Tdd In Polars!"
+    "import pelage as plg\n",
+    "\n",
+    "(\n",
+    "\n",
+    ")"
    ]
   },
   {
@@ -211,10 +262,7 @@
     "            \"model_variant\",\n",
     "            \"license_plate\",\n",
     "            \"brand_name\",\n",
-    "            # for primary key\n",
-    "            \"vehicle_id\",\n",
-    "            \"reporting_period\",\n",
-    "            \"used_in_calculation\",\n",
+    "            *primary_key_columns,\n",
     "        ],\n",
     "    )\n",
     "    .pipe(plg.custom_check, pl.col.fuel_type.str.contains(r\"[A-Z]\").not_())\n",
@@ -285,6 +333,34 @@
     "full_stocks_by_10min\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75310255",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "To summarize this presentation, we have seen how we can refactor some horrible slow-performing pandas code into good pandas code using method chaining.\n",
+    "\n",
+    "We have seen that it is then fairly easy to translate into polars, with a good equivalence test, you just write a `.pipe(pl.DataFrame)` and then you shift it up!\n",
+    "\n",
+    "And then we discovered how much valuable insights and intel we can derive from just a few simple data tests to build up our analysis.\n",
+    "\n",
+    "As you can see, being able to express tests in the same manner as the code you are writing is a critical part of the TDD workflow.\n",
+    "\n",
+    "But thankfully this part has already be done for your in pelage, because under the hood, beside a few things to process user inputs, all the core logic leverages polars. \n",
+    "\n",
+    "The result is a relative simple but easy to use package, that allows to write from the very start code of great quality that is required for production contexts. \n",
+    "\n",
+    "All you have to do is: write a failing test, write some code to make it pass, once the test passes, refactor to make it better. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a855d86",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
