Improve layout of the presentation

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -20,43 +20,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3bc15c",
+   "id": "5e1a0db2",
    "metadata": {},
    "source": [
-    "# What is TDD?\n",
-    "![alt text](assets/tdd-schema.png){width=500}"
+    "My name is Alix Tiran-Cappello, I work as a data scientist / MLOPS pipeline maintainer for Renault Group for my day job.\n",
+    "\n",
+    "I am only saying this to explain that I get called A LOT to debug some pandas either failing or with absolute garbage performance.\n",
+    "\n",
+    "And this experience has definitely shaped some ideas that will perspire during this presentation. I will refrain from swearing but you might experience decent levels of salt at times.\n",
+    "\n",
+    "But today I am here on my own, and what I will say today is not associated in any way with my company.\n",
+    "\n",
+    "The reason I am here is to present to you a small open source package that I created: `pelage` .\n",
+    "\n",
+    "My goal is to bring basic key practices of software engineering that have demonstrated usefulness to maintain velocity and imbed quality from the start\n",
+    "to help you write better data science code with polars and TDD.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5e1a0db2",
+   "id": "3b3bc15c",
    "metadata": {},
    "source": [
-    "My name is Alix Tiran-Cappello, I work as a data scientist / MLOPS pipeline maintainer for Renault Group for my day job. \n",
+    "# What is TDD?\n",
     "\n",
-    "I am only saying this to explain that I get called A LOT to debug some pandas either failing or with absolute garbage performance.  \n",
-    "\n",
-    "And this experience has definitely shaped some ideas that will perspire during this presentation. \n",
-    "\n",
-    "But today I am here on my own, and what I will say today is not associated in any way with my company. \n",
-    "\n",
-    "\n",
-    "The reason I am here is to present to you a small open source package `pelage`. that I created to help you write better data science code with polars and TDD. \n",
-    "\n",
-    "My goal is to bring basic key practices of software engineering that have demonstrated usefulness to maintain velocity and imbed quality from the start when you write data science code.\n",
-    "\n",
+    "![alt text](assets/tdd-schema.png){width=500}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "613fa938",
+   "metadata": {},
+   "source": [
     "What is TDD ?\n",
     "\n",
     "We will see it countless times during this talk.\n",
     "\n",
-    "Before we can start with TDD, I'd like to guide you through a brief journey. During this time, we will take some pandas code, AND WITHOUT LOOKING AT THE DATA, translate it using refactoring tests to polars, to get used to its syntax and specificities. \n",
+    "Before we can start with TDD, I'd like to guide you through a brief journey. During this time, we will take some pandas code, AND WITHOUT LOOKING AT THE DATA, translate it using refactoring tests to polars, to get used to its syntax and specificities.\n",
     "\n",
-    "Then we will see how we can use pelage to write a meaningful data test, see it fail, then write some simple code, and make it pass. \n"
+    "Then we will see how we can use pelage to write a meaningful data test, see it fail, then write some simple code, and make it pass.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "117f5150",
    "metadata": {},
    "outputs": [],
@@ -68,10 +75,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "dff96578",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The notifier extension is already loaded. To reload it, use:\n",
+      "  %reload_ext notifier\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext notifier"
    ]
@@ -81,7 +97,9 @@
    "id": "68a928fb",
    "metadata": {},
    "source": [
-    "# Step 1: From Pandas To Polars"
+    "# Step 1: From Pandas To Polars\n",
+    "\n",
+    "![kent-hat](assets/kent-beck-hat.png){width=150}\n"
    ]
   },
   {
@@ -91,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fmt: off\n",
+    "\n",
     "df = emissions_pandas\n",
     "df = df.dropna(subset=[\"fuel_consumption\"])\n",
     "df.drop([\"obfcm_data_source\", \"registered_category\"], axis=1, inplace=True)\n",
@@ -114,9 +132,16 @@
     "grouped = grouped.dropna()\n",
     "grouped = grouped.sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
     "grouped = grouped[grouped[\"vehicle_count\"] >= 100]\n",
-    "grouped = grouped.reset_index(drop=True)\n",
-    "# fmt: on"
+    "grouped = grouped.reset_index(drop=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b68b24a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -161,7 +186,7 @@
     "    .sort([\"mean_fuel_consumption\", \"year\"], descending=True)\n",
     "    .filter(pl.col.vehicle_count >= 100)\n",
     ")\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -170,15 +195,16 @@
    "metadata": {},
    "source": [
     "# But What About TDD?\n",
+    "\n",
     "## This is Kent Beck:\n",
     "\n",
-    "![alt text](assets/kent_beck.png){width=400}\n",
+    "![alt text](assets/kent_beck.png){width=350}\n",
     "\n",
-    "- #####  Kent coined the term TDD\n",
-    "- #####  Kent created one of the first testing frameworks\n",
-    "- #####  Kent found that a testing framework should be written in the same language as the code\n",
-    "- #####  Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
-    "- #####  Kent has usually good ideas about software development"
+    "- ##### Kent coined the term TDD\n",
+    "- ##### Kent created one of the first testing frameworks\n",
+    "- ##### Kent found that a testing framework should be written in the same language as the code\n",
+    "- ##### Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
+    "- ##### Kent has usually good ideas about software development\n"
    ]
   },
   {
@@ -188,11 +214,12 @@
    "source": [
     "## Enters Pelage\n",
     "\n",
-    "A testing framework to be used with polars to express data science concepts clearly and easily.\n",
+    "##### A testing framework to be used with polars to express data science concepts clearly and easily.\n",
     "\n",
-    "Pass a dataframe to a testing function:\n",
-    "- If it fails you get a nice descriptive error message!\n",
-    "- If it passes, you get your dataframe back!"
+    "##### Pass a dataframe to a testing function:\n",
+    "\n",
+    "- ##### If it fails you get a nice descriptive error message!\n",
+    "- ##### If it passes, you get your dataframe back!\n"
    ]
   },
   {
@@ -203,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "b4fbb6c4",
    "metadata": {},
    "outputs": [],
@@ -216,7 +243,7 @@
    "id": "ca947496",
    "metadata": {},
    "source": [
-    "## Step 2: Now Let's Do Some Real Tdd In Polars!"
+    "## Step 2: Now Let's Do Some Real Tdd In Polars!\n"
    ]
   },
   {
@@ -224,14 +251,48 @@
    "execution_count": null,
    "id": "849fcbb8",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pelage as plg\n",
-    "\n",
-    "(\n",
-    "\n",
-    ")"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (995_875, 24)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>vehicle_id</th><th>reporting_period</th><th>obfcm_data_source</th><th>used_in_calculation</th><th>country</th><th>manufacturer_name</th><th>model_type</th><th>model_variant</th><th>license_plate</th><th>brand_name</th><th>commercial_name</th><th>registered_category</th><th>ewltp_g_per_km</th><th>fuel_type</th><th>fuel_mode</th><th>year</th><th>fuel_consumption</th><th>electric_consumption_wh_per_km</th><th>electric_range_km</th><th>engine_capacity_cm3</th><th>engine_power_kw</th><th>mass_kg</th><th>total_fuel_consumed_l</th><th>total_distance_travelled_km</th></tr><tr><td>i64</td><td>i64</td><td>str</td><td>bool</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>str</td><td>str</td><td>i64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>9515604</td><td>2023</td><td>&quot;OEM&quot;</td><td>false</td><td>&quot;BE&quot;</td><td>&quot;MERCEDES-BENZ AG&quot;</td><td>&quot;R1ES&quot;</td><td>&quot;U21IT0&quot;</td><td>&quot;CZAA050C&quot;</td><td>&quot;MERCEDES-BENZ&quot;</td><td>&quot;E 300 DE&quot;</td><td>&quot;M1&quot;</td><td>36.0</td><td>&quot;diesel/electric&quot;</td><td>&quot;P&quot;</td><td>2023</td><td>1.4</td><td>212.0</td><td>52.0</td><td>1950.0</td><td>143.0</td><td>2145.0</td><td>1.68</td><td>8.2</td></tr><tr><td>13523581</td><td>2023</td><td>&quot;OEM&quot;</td><td>true</td><td>&quot;FR&quot;</td><td>&quot;CHRYSLER&quot;</td><td>&quot;JK&quot;</td><td>&quot;JTAFG&quot;</td><td>&quot;N5H62A&quot;</td><td>&quot;JEEP&quot;</td><td>&quot;WRANGLER UNLIMITED&quot;</td><td>&quot;M1G&quot;</td><td>79.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2022</td><td>3.5</td><td>221.0</td><td>44.0</td><td>1995.0</td><td>200.0</td><td>2348.0</td><td>1140.2</td><td>11678.3</td></tr><tr><td>6849622</td><td>2023</td><td>&quot;OEM&quot;</td><td>true</td><td>&quot;NL&quot;</td><td>&quot;BMW AG&quot;</td><td>&quot;G5X&quot;</td><td>&quot;TA61&quot;</td><td>&quot;IAA50900&quot;</td><td>&quot;BMW&quot;</td><td>&quot;X5 xDrive45e&quot;</td><td>&quot;M1G&quot;</td><td>29.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2021</td><td>1.3</td><td>251.0</td><td>85.0</td><td>2998.0</td><td>210.0</td><td>2510.0</td><td>2096.85</td><td>31197.1</td></tr><tr><td>11510555</td><td>2023</td><td>&quot;OEM&quot;</td><td>true</td><td>&quot;DE&quot;</td><td>&quot;BMW AG&quot;</td><td>&quot;G3X&quot;</td><td>&quot;TS11&quot;</td><td>&quot;IAW50000&quot;</td><td>&quot;BMW&quot;</td><td>&quot;X3 xDrive30e&quot;</td><td>&quot;M1G&quot;</td><td>46.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2021</td><td>2.0</td><td>188.0</td><td>50.0</td><td>1998.0</td><td>135.0</td><td>2065.0</td><td>941.06</td><td>17041.8</td></tr><tr><td>739896</td><td>2023</td><td>&quot;OEM&quot;</td><td>true</td><td>&quot;LU&quot;</td><td>&quot;MERCEDES-BENZ AG&quot;</td><td>&quot;212&quot;</td><td>&quot;U01IT1&quot;</td><td>&quot;CZAA050A&quot;</td><td>&quot;MERCEDES-BENZ&quot;</td><td>&quot;E 300 DE 4MATIC&quot;</td><td>&quot;M1&quot;</td><td>37.0</td><td>&quot;diesel/electric&quot;</td><td>&quot;P&quot;</td><td>2021</td><td>1.4</td><td>236.0</td><td>51.0</td><td>1950.0</td><td>143.0</td><td>2130.0</td><td>1436.4</td><td>30657.2</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>10739202</td><td>2023</td><td>&quot;OEM&quot;</td><td>false</td><td>&quot;FR&quot;</td><td>&quot;AUTOMOBILES PEUGEOT&quot;</td><td>&quot;M&quot;</td><td>&quot;4&quot;</td><td>&quot;DGZU-C12000&quot;</td><td>&quot;PEUGEOT&quot;</td><td>&quot;3008&quot;</td><td>&quot;M1&quot;</td><td>28.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2023</td><td>1.2</td><td>163.0</td><td>67.0</td><td>1598.0</td><td>133.0</td><td>1838.0</td><td>3.56</td><td>11.2</td></tr><tr><td>10715121</td><td>2023</td><td>&quot;OEM&quot;</td><td>true</td><td>&quot;DE&quot;</td><td>&quot;AUTOMOBILES PEUGEOT&quot;</td><td>&quot;M&quot;</td><td>&quot;4&quot;</td><td>&quot;5GBU-C1J000&quot;</td><td>&quot;PEUGEOT&quot;</td><td>&quot;3008&quot;</td><td>&quot;M1&quot;</td><td>30.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2021</td><td>1.3</td><td>153.0</td><td>63.0</td><td>1598.0</td><td>147.0</td><td>1915.0</td><td>1505.49</td><td>19862.6</td></tr><tr><td>8267319</td><td>2023</td><td>&quot;OEM&quot;</td><td>false</td><td>&quot;SE&quot;</td><td>&quot;TOYOTA&quot;</td><td>&quot;XA5P(EU,M)&quot;</td><td>&quot;AXAP54(N)&quot;</td><td>&quot;AXAP54L-ANXGBW(1A)&quot;</td><td>&quot;TOYOTA&quot;</td><td>&quot;TOYOTA RAV4&quot;</td><td>&quot;M1&quot;</td><td>22.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2021</td><td>1.0</td><td>166.0</td><td>75.0</td><td>2487.0</td><td>136.0</td><td>2005.0</td><td>0.0</td><td>0.0</td></tr><tr><td>5015536</td><td>2023</td><td>&quot;OEM&quot;</td><td>true</td><td>&quot;BE&quot;</td><td>&quot;MERCEDES-BENZ AG&quot;</td><td>&quot;H1GLE&quot;</td><td>&quot;B21JT1&quot;</td><td>&quot;CZAAB56A&quot;</td><td>&quot;MERCEDES-BENZ&quot;</td><td>&quot;GLE 350 DE 4MATIC&quot;</td><td>&quot;M1&quot;</td><td>20.0</td><td>&quot;diesel/electric&quot;</td><td>&quot;P&quot;</td><td>2022</td><td>0.7</td><td>271.0</td><td>95.0</td><td>1950.0</td><td>143.0</td><td>2655.0</td><td>4832.79</td><td>70584.6</td></tr><tr><td>209832</td><td>2023</td><td>&quot;OEM&quot;</td><td>false</td><td>&quot;NL&quot;</td><td>&quot;VOLVO&quot;</td><td>&quot;Z&quot;</td><td>&quot;ZWBF&quot;</td><td>&quot;ZWBFVD0?&quot;</td><td>&quot;VOLVO&quot;</td><td>&quot;V60&quot;</td><td>&quot;M1&quot;</td><td>42.0</td><td>&quot;petrol/electric&quot;</td><td>&quot;P&quot;</td><td>2021</td><td>null</td><td>160.0</td><td>53.0</td><td>1969.0</td><td>186.0</td><td>2075.0</td><td>2644.0</td><td>47648.0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (995_875, 24)\n",
+       "┌────────────┬───────────┬───────────┬───────────┬───┬───────────┬─────────┬───────────┬───────────┐\n",
+       "│ vehicle_id ┆ reporting ┆ obfcm_dat ┆ used_in_c ┆ … ┆ engine_po ┆ mass_kg ┆ total_fue ┆ total_dis │\n",
+       "│ ---        ┆ _period   ┆ a_source  ┆ alculatio ┆   ┆ wer_kw    ┆ ---     ┆ l_consume ┆ tance_tra │\n",
+       "│ i64        ┆ ---       ┆ ---       ┆ n         ┆   ┆ ---       ┆ f64     ┆ d_l       ┆ velled_km │\n",
+       "│            ┆ i64       ┆ str       ┆ ---       ┆   ┆ f64       ┆         ┆ ---       ┆ ---       │\n",
+       "│            ┆           ┆           ┆ bool      ┆   ┆           ┆         ┆ f64       ┆ f64       │\n",
+       "╞════════════╪═══════════╪═══════════╪═══════════╪═══╪═══════════╪═════════╪═══════════╪═══════════╡\n",
+       "│ 9515604    ┆ 2023      ┆ OEM       ┆ false     ┆ … ┆ 143.0     ┆ 2145.0  ┆ 1.68      ┆ 8.2       │\n",
+       "│ 13523581   ┆ 2023      ┆ OEM       ┆ true      ┆ … ┆ 200.0     ┆ 2348.0  ┆ 1140.2    ┆ 11678.3   │\n",
+       "│ 6849622    ┆ 2023      ┆ OEM       ┆ true      ┆ … ┆ 210.0     ┆ 2510.0  ┆ 2096.85   ┆ 31197.1   │\n",
+       "│ 11510555   ┆ 2023      ┆ OEM       ┆ true      ┆ … ┆ 135.0     ┆ 2065.0  ┆ 941.06    ┆ 17041.8   │\n",
+       "│ 739896     ┆ 2023      ┆ OEM       ┆ true      ┆ … ┆ 143.0     ┆ 2130.0  ┆ 1436.4    ┆ 30657.2   │\n",
+       "│ …          ┆ …         ┆ …         ┆ …         ┆ … ┆ …         ┆ …       ┆ …         ┆ …         │\n",
+       "│ 10739202   ┆ 2023      ┆ OEM       ┆ false     ┆ … ┆ 133.0     ┆ 1838.0  ┆ 3.56      ┆ 11.2      │\n",
+       "│ 10715121   ┆ 2023      ┆ OEM       ┆ true      ┆ … ┆ 147.0     ┆ 1915.0  ┆ 1505.49   ┆ 19862.6   │\n",
+       "│ 8267319    ┆ 2023      ┆ OEM       ┆ false     ┆ … ┆ 136.0     ┆ 2005.0  ┆ 0.0       ┆ 0.0       │\n",
+       "│ 5015536    ┆ 2023      ┆ OEM       ┆ true      ┆ … ┆ 143.0     ┆ 2655.0  ┆ 4832.79   ┆ 70584.6   │\n",
+       "│ 209832     ┆ 2023      ┆ OEM       ┆ false     ┆ … ┆ 186.0     ┆ 2075.0  ┆ 2644.0    ┆ 47648.0   │\n",
+       "└────────────┴───────────┴───────────┴───────────┴───┴───────────┴─────────┴───────────┴───────────┘"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -273,7 +334,7 @@
     "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
     "    .pipe(plg.has_dtypes, {\"used_in_calculation\": pl.Boolean})\n",
     ")\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -331,7 +392,7 @@
     "    .pipe(plg.not_constant, columns=\"timestamp\", group_by=[\"zone\", \"subzone\", \"date\"])\n",
     ")\n",
     "full_stocks_by_10min\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -339,6 +400,9 @@
    "id": "75310255",
    "metadata": {},
    "source": [
+    "I'll leave it here for now because we have seen enough examples so that you can get a reasonable idea of pelage capabilities.\n",
+    "We saw some checks that apply for columns, rows and even groups and there are more features for time series, infinite values and more.\n",
+    "\n",
     "# Conclusion\n",
     "\n",
     "To summarize this presentation, we have seen how we can refactor some horrible slow-performing pandas code into good pandas code using method chaining.\n",
@@ -349,18 +413,17 @@
     "\n",
     "As you can see, being able to express tests in the same manner as the code you are writing is a critical part of the TDD workflow.\n",
     "\n",
-    "But thankfully this part has already be done for your in pelage, because under the hood, beside a few things to process user inputs, all the core logic leverages polars. \n",
+    "But thankfully this part has already be done for your in pelage, because under the hood, beside a few things to process user inputs, all the core logic leverages polars.\n",
     "\n",
-    "The result is a relative simple but easy to use package, that allows to write from the very start code of great quality that is required for production contexts. \n",
+    "The result is a relative simple but easy to use package, that allows to write from the very start code of great quality that is required for production.\n",
     "\n",
-    "All you have to do is: write a failing test, write some code to make it pass, once the test passes, refactor to make it better. "
+    "All you have to do is: write a failing test, write some code to make it pass, once the test passes, refactor to make it better.\n",
+    "\n",
+    "# And Now?\n",
+    "\n",
+    "- ### Got to the website: https://alixtc.github.io/pelage/\n",
+    "- ### Type `uv add pelage`\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a855d86",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
